--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,40 +1,39 @@
-NAME 	= libft.a
-CC 		= gcc
-CFLAGS 	= -Wall -Wextra -Werror
-SRCS 	= ft_isalpha.c/
-					ft_ft_bzero.c/
-					ft_ft_calloc.c/
-					ft_isalnum.c/
-					ft_isalpha.c/
-					ft_isascii.c/
-					ft_isdigit.c/
-					ft_toupper.c/
-					ft_islower.c/
-					ft_isprint.c/
-					ft_memchr.c/
-					ft_memcmp.c/
-					ft_memcpy.c/
-					ft_memmove.c/
-					ft_memset.c/
-					ft_strchr.c/
-					ft_strdup.c/
-					ft_strncmp.c/
-					ft_strnstr.c/
-					ft_strrchr.c/
-					ft_strlen.c/
-					ft_strlcpy.c/
-					ft_strlcat.c/
-					ft_substr.c/
-					ft_strjoin.c/
-					ft_strtrim.c/
-					ft_split.c/
-					ft_itoa.c/
-					ft_strmapi.c/
-					ft_striteri.c/
-					ft_putchar_fd.c/
-					ft_putstr_fd.c/
-					ft_putendl_fd.c/
-					ft_putnbr_fd.c
+NAME = libft.a
+CC = gcc
+CFLAGS = -Wall -Wextra -Werror
+SRCS 	= ft_atoi.c\
+		        ft_bzero.c\
+				ft_calloc.c\
+				ft_isalnum.c\
+				ft_isalpha.c\
+				ft_isascii.c\
+				ft_isdigit.c\
+				ft_toupper.c\
+				ft_islower.c\
+				ft_isprint.c\
+				ft_memchr.c\
+				ft_memcmp.c\
+				ft_memcpy.c\
+				ft_memmove.c\
+				ft_memset.c\
+				ft_strchr.c\
+				ft_strdup.c\
+				ft_strncmp.c\
+				ft_strnstr.c\
+				ft_strrchr.c\
+				ft_strlen.c\
+				ft_strlcpy.c\
+				ft_strlcat.c\
+				ft_substr.c\
+				ft_strjoin.c\
+				ft_strtrim.c\
+				ft_itoa.c\
+				ft_strmapi.c\
+				ft_striteri.c\
+				ft_putchar_fd.c\
+				ft_putstr_fd.c\
+				ft_putendl_fd.c\
+				ft_putnbr_fd.c
 					
 OBJS 	= ${SRCS:.c=.o} 
 HEADER 	= includes
