Update command script

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -44,8 +44,8 @@ BONUS	= ft_lstnew.c\
 		  ft_lstadd_back.c\
 		  ft_lstdelone.c\
 		  ft_lstclear.c\
-		  ft_lstiter.c\
-		  ft_lstmap.c
+		  ft_lstiter.c
+		  
 
 BONUSOBJT = ${BONUS:.c=.o}
 HEADER 	= includes
@@ -72,4 +72,4 @@ fclean :clean
 
 re:fclean all
 
-.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re 
