--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,7 +1,7 @@
 NAME = libft.a
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
-SRCS 	=	ft_atoi.c\
+SRCS =	ft_atoi.c\
 			ft_bzero.c\
 			ft_calloc.c\
 			ft_isalnum.c\
@@ -9,7 +9,7 @@ SRCS 	=	ft_atoi.c\
 			ft_isascii.c\
 			ft_isdigit.c\
 			ft_toupper.c\
-			ft_islower.c\
+			ft_tolower.c\
 			ft_isprint.c\
 			ft_memchr.c\
 			ft_memcmp.c\
